--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -2,6 +2,7 @@
     "Common": {
         "delete": "Delete",
         "edit": "Edit",
+        "save": "Save",
         "cancel": "Cancel"
     }
 }
