:tada: register vehicles + fixes

--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -26,6 +26,9 @@
     "Vehicles": {
         "model": "Model",
         "registrationStatus": "Registration Status",
-        "insuranceStatus": "Insurance Status"
+        "insuranceStatus": "Insurance Status",
+        "owner": "Owner",
+        "color": "Color",
+        "plate": "Plate"
     }
 }
