--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -5,21 +5,25 @@
         "MANAGE_VEHICLE": "Manage Vehicles",
         "MANAGE_ETHNICITY": "Manage Ethnicities",
         "MANAGE_BLOOD_GROUP": "Manage blood groups",
+        "MANAGE_LICENSE": "Manage Licenses",
         "DELETE_GENDER": "Delete Gender",
         "DELETE_WEAPON": "Delete Weapon",
         "DELETE_VEHICLE": "Delete Vehicle",
         "DELETE_ETHNICITY": "Delete Ethnicity",
         "DELETE_BLOOD_GROUP": "Delete blood group",
+        "DELETE_LICENSE": "Delete License",
         "EDIT_GENDER": "Edit Gender",
         "EDIT_WEAPON": "Edit Weapon",
         "EDIT_VEHICLE": "Edit Vehicle",
         "EDIT_ETHNICITY": "Edit Ethnicity",
         "EDIT_BLOOD_GROUP": "Edit blood group",
+        "EDIT_LICENSE": "Edit License",
         "CREATE_GENDER": "Create Gender",
         "CREATE_WEAPON": "Create Weapon",
         "CREATE_VEHICLE": "Create Vehicle",
         "CREATE_ETHNICITY": "Create Ethnicity",
         "CREATE_BLOOD_GROUP": "Create blood group",
+        "CREATE_LICENSE": "Create License",
         "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!"
     }
 }
