--- a/packages/client/locales/en/account.json
+++ b/packages/client/locales/en/account.json
@@ -3,5 +3,8 @@
         "account": "Account",
         "accountInfo": "Account Info",
         "accountSettings": "Account Settings"
+    },
+    "Notifications": {
+        "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
     }
 }
