:tada: more progress on citizen dashboard

--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -21,6 +21,10 @@
         "address": "Address",
         "dateOfBirth": "Date of Birth",
         "image": "Image",
+        "driversLicense": "Drivers License",
+        "weaponLicense": "Firearms License",
+        "pilotLicense": "Pilot License",
+        "ccw": "CCW",
         "alert_deleteCitizen": "Are you sure you want to delete <span>{citizen}</span>? This action cannot be undone!"
     },
     "Vehicles": {
