--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -25,7 +25,7 @@
     "weaponLicense": "Firearms License",
     "pilotLicense": "Pilot License",
     "ccw": "CCW",
-    "alert_deleteCitizen": "Are you sure you want to delete <span>{citizen}</span>? This action cannot be undone!"
+    "alert_deleteCitizen": "Are you sure you want to delete <span>{citizen}</span>? This action cannot be undone."
   },
   "Vehicles": {
     "model": "Model",
@@ -36,7 +36,19 @@
     "plate": "Plate",
     "yourVehicles": "Your Vehicles",
     "addVehicle": "Add Vehicle",
-    "noVehicles": "You do not have any vehicles registered yet."
+    "noVehicles": "You do not have any vehicles registered yet.",
+    "deleteVehicle": "Delete Vehicle",
+    "alert_deleteVehicle": "Are you sure you want to delete this vehicle? This action cannot be undone."
+  },
+  "Weapons": {
+    "model": "Model",
+    "registrationStatus": "Registration Status",
+
+    "yourWeapons": "Your Weapons",
+    "addWeapon": "Add Weapon",
+    "noWeapons": "You do not have any weapons registered yet.",
+    "deleteWeapon": "Delete Weapon",
+    "alert_deleteWeapon": "Are you sure you want to delete this weapon? This action cannot be undone."
   },
   "MedicalRecords": {
     "yourMedicalRecords": "Your medical records",
