--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -7,6 +7,8 @@
     "actions": "Actions",
     "type": "Type",
     "description": "Description",
-    "manage": "Manage"
+    "manage": "Manage",
+    "on": "On",
+    "off": "Off"
   }
 }
