:tada: improved error messages

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -9,6 +9,16 @@
     "description": "Description",
     "manage": "Manage",
     "on": "On",
-    "off": "Off"
+    "off": "Off",
+    "error": "An unexpected error occurred"
+  },
+  "Errors": {
+    "nameAlreadyTaken": "A citizen with that full name is already in use.",
+    "whitelistPending": "This account is still pending access to the CAD.",
+    "whitelistDeclined": "This account was declined access to the CAD.",
+    "passwordIncorrect": "The password you entered was not correct.",
+    "userAlreadyExists": "A user with that username already exists.",
+    "notFound": "The requested item was not found.",
+    "plateAlreadyInUse": "That plate is already being used on a vehicle."
   }
 }
