:tada: refactor code

--- a/packages/client/locales/en/auth.json
+++ b/packages/client/locales/en/auth.json
@@ -9,6 +9,7 @@
     "noAccount": "Don't have an account? Register here.",
     "hasAccount": "Already have an account? Login here.",
     "show": "show",
-    "hide": "hide"
+    "hide": "hide",
+    "registrationCode": "Registration Code"
   }
 }
