:tada: able to ban/unban users

--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -21,6 +21,7 @@
     "address": "Address",
     "dateOfBirth": "Date of Birth",
     "image": "Image",
+    "age": "Age",
     "driversLicense": "Drivers License",
     "weaponLicense": "Firearms License",
     "pilotLicense": "Pilot License",
