:tada: manage users

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -25,6 +25,7 @@
     "userAlreadyExists": "A user with that username already exists.",
     "notFound": "The requested item was not found.",
     "plateAlreadyInUse": "That plate is already being used on a vehicle.",
-    "invalidImageType": "Only types image/png, image/jpeg, image/jpg and image/jpg are supported"
+    "invalidImageType": "Only types image/png, image/jpeg, image/jpg and image/jpg are supported",
+    "userBanned": "This account is banned from this CAD."
   }
 }
