:tada: initial tow

--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -11,6 +11,7 @@
     "eyeColor": "Eye Color",
     "registerVehicle": "Register Vehicle",
     "registerWeapon": "Register Weapon",
+    "createTowCall": "Create Tow Call",
     "weight": "Weight",
     "height": "Height",
     "name": "Name",
