:tada: feat(tow): finish tow dashboard

--- a/packages/client/locales/en/tow.json
+++ b/packages/client/locales/en/tow.json
@@ -7,6 +7,8 @@
     "location": "Location",
     "caller": "Caller",
     "createTowCall": "Create Tow Call",
-    "editTowCall": "Edit Tow Call"
+    "editTowCall": "Edit Tow Call",
+    "endCall": "End Call",
+    "selectCitizen": "Select Citizen"
   }
 }
