--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -29,6 +29,7 @@
     "notFound": "The requested item was not found.",
     "plateAlreadyInUse": "That plate is already being used on a vehicle.",
     "invalidImageType": "Only types image/png, image/jpeg, image/jpg and image/jpg are supported",
-    "userBanned": "This account is banned from this CAD."
+    "userBanned": "This account is banned from this CAD.",
+    "alreadyInThisBusiness": "You are already an employee at this business."
   }
 }
