--- a/packages/client/locales/en/business.json
+++ b/packages/client/locales/en/business.json
@@ -26,6 +26,10 @@
     "canCreatePosts": "Can create posts",
     "fireEmployee": "Fire employee",
     "deleteBusiness": "Delete Business",
+    "whitelistStatus": "Whitelist Status",
+    "allEmployees": "All Employees",
+    "pendingEmployees": "Pending Employees",
+    "noPendingEmployees": "There are no employees pending access.",
     "businessIsWhitelisted": "This business is whitelisted. You will be able to view it once you're accepted.",
     "alert_fireEmployee": "Are you sure you want to fire <span>{employee}</span>? This action cannot be undone.",
     "alert_deletePost": "Are you sure you want to delete this post? This action cannot be undone.",
