:tada: able to manage businesses (admin)

--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -27,6 +27,8 @@
     "weaponLicense": "Firearms License",
     "pilotLicense": "Pilot License",
     "ccw": "CCW",
+    "createTaxiCall": "Create Taxi Call",
+    "create911Call": "Create 911 Call",
     "alert_deleteCitizen": "Are you sure you want to delete <span>{citizen}</span>? This action cannot be undone."
   },
   "Vehicles": {
