--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -2,12 +2,16 @@
   "Management": {
     "management": "Management",
     "MANAGE_CITIZENS": "Manage Citizens",
-    "MANAGE_COMPANIES": "Manage Companies",
+    "MANAGE_BUSINESSES": "Manage Businesses",
     "MANAGE_USERS": "Manage Users",
     "MANAGE_CAD_SETTINGS": "CAD Settings",
     "viewInfo": "View Info",
     "noCitizens": "There are no citizens for this CAD yet.",
-    "user": "User"
+    "noBusinesses": "There are no businesses for this CAD yet.",
+    "user": "User",
+    "owner": "Owner",
+    "deleteBusiness": "Delete Business",
+    "alert_deleteBusiness": "Are you sure you want to delete this <span>{name}</span>? All it's data will be lost. This action cannot be undone."
   },
   "Values": {
     "values": "Values",
