:tada: start on leo translations

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -20,7 +20,8 @@
     "insufficientPermissions": "Insufficient Permissions",
     "noOptions": "No Options",
     "accept": "Accept",
-    "decline": "Decline"
+    "decline": "Decline",
+    "createdAt": "Created At"
   },
   "Errors": {
     "unknown": "An unexpected error occurred",
