--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -15,6 +15,7 @@
     "startedAt": "Started At",
     "endedAt": "Ended At",
     "notEndedYet": "Not ended yet.",
+    "status": "Status",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone."
   }
 }
