:tada: start on divisions

--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -20,6 +20,7 @@
     "postal": "Postal",
     "notes": "Notes",
     "violations": "Violations",
+    "division": "Division",
     "createTicket": "Create Ticket",
     "createArrestReport": "Create Arrest Report",
     "createWrittenWarning": "Create Written Warning",
