--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -26,10 +26,14 @@
     "createWrittenWarning": "Create Written Warning",
     "createBolo": "Create Bolo",
     "nameSearch": "Name Search",
+    "addressSearch": "Address Search",
     "notepad": "Notepad",
     "plateSearch": "Plate Search",
     "weaponSearch": "Weapon Search",
     "activeOfficers": "Active Officers",
+    "updateAOP": "Update Area of Play",
+    "utilityPanel": "Utility Panel",
+    "noActiveOfficers": "There are no active officers",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone."
   }
 }
