:tada: more progress on dispatch

--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -1,5 +1,6 @@
 {
   "Leo": {
+    "dispatch": "Dispatch",
     "myOfficers": "My Officers",
     "myOfficerLogs": "My Officer Logs",
     "createOfficer": "Create Officer",
