--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -36,6 +36,9 @@
     "utilityPanel": "Utility Panel",
     "noActiveOfficers": "There are no active officers",
     "badgeNumber": "Badge Number",
+    "endCall": "End Call",
+    "end911Call": "End 911 Call",
+    "alert_end911Call": "Are you sure you want to end this call?",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone."
   }
 }
