--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -37,6 +37,12 @@
     "noActiveOfficers": "There are no active officers",
     "badgeNumber": "Badge Number",
     "areaOfPlay": "Area of Play",
+    "plateOrVin": "Enter VIN or Plate",
+    "serialNumber": "Enter Serial Number",
+    "results": "Results",
+    "owner": "Owner",
+    "weaponNotFound": "Could not find that weapon.",
+    "vehicleNotFound": "Could not find that vehicle.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone."
   }
 }
