--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -39,6 +39,7 @@
     "userBanned": "This account is banned from this CAD.",
     "alreadyInThisBusiness": "You are already an employee at this business.",
     "insufficientPermissions": "Insufficient Permissions",
-    "maxBusinessesLength": "You have reached the maximum limit of businesses per citizen."
+    "maxBusinessesLength": "You have reached the maximum limit of businesses per citizen.",
+    "dateLargerThanNow": "Please provide a date smaller than the current date."
   }
 }
