:tada: add 911 call events

--- a/packages/client/locales/en/calls.json
+++ b/packages/client/locales/en/calls.json
@@ -12,11 +12,14 @@
     "caller": "Caller",
     "createTowCall": "Create tow call",
     "createTaxiCall": "Create taxi call",
+    "create911Call": "Create 911 call",
     "editTowCall": "Edit tow call",
     "assignedUnits": "Assigned Units",
     "selectCitizen": "Select citizen",
     "endCall": "End Call",
     "end911Call": "End 911 Call",
+    "addEvent": "Add Event",
+    "noEvents": "This call does not have any events",
     "alert_end911Call": "Are you sure you want to end this call?",
     "alert_endTowCall": "Are you sure you want to end this call?"
   }
