--- a/packages/client/locales/en/truck-logs.json
+++ b/packages/client/locales/en/truck-logs.json
@@ -8,6 +8,7 @@
     "vehicle": "Vehicle",
     "startedAt": "Started At",
     "endedAt": "Ended At",
+    "noTruckLogs": "You don't have any truck logs yet.",
     "alert_deleteTruckLog": "Are you sure you want to delete this truck log? This action cannot be undone."
   }
 }
