:tada: many improvements and fixes closes #43 closes #44 closes #38 closes #41

--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -56,6 +56,7 @@
     "writtenWarnings": "Written Warnings",
     "arrestReports": "Arrest Reports",
     "nameNotFound": "Could not find a citizen with that name",
+    "createWarrant": "Create Warrant",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone."
   }
 }
