--- a/packages/client/locales/en/calls.json
+++ b/packages/client/locales/en/calls.json
@@ -23,7 +23,9 @@
     "selectUnit": "Select Unit",
     "viewEvents": "View Events",
     "callEvents": "Call Events",
+    "deleteCallEvent": "Delete Event",
     "noEvents": "This call does not have any events",
+    "alert_deleteCallEvent": "Are you sure you want to delete this event? This action cannot be undone.",
     "alert_end911Call": "Are you sure you want to end this call?",
     "alert_endTowCall": "Are you sure you want to end this call?"
   }
