--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -59,6 +59,8 @@
     "createWarrant": "Create Warrant",
     "citizenDead": "WARNING: This citizen dead on {date}",
     "hasWarrants": "WARNING: This citizen has active warrants!",
+    "rank": "Rank",
+    "officerLogs": "Officer Logs",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone."
   }
 }
