--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -39,6 +39,7 @@
     "plateAlreadyInUse": "That plate is already being used on a vehicle.",
     "invalidImageType": "Only types image/png, image/jpeg, image/jpg and image/jpg are supported",
     "userBanned": "This account is banned from this CAD.",
+    "userDeleted": "This account has been deleted from this CAD.",
     "alreadyInThisBusiness": "You are already an employee at this business.",
     "insufficientPermissions": "Insufficient Permissions",
     "maxBusinessesLength": "You have reached the maximum limit of businesses per citizen.",
