--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -64,6 +64,7 @@
     "disableSignal100": "Disable Signal 100",
     "enableSignal100": "Enable Signal 100",
     "signal100enabled": "Signal 100 is enabled",
+    "records": "Records",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone."
   }
 }
