--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -65,6 +65,9 @@
     "enableSignal100": "Enable Signal 100",
     "signal100enabled": "Signal 100 is enabled",
     "records": "Records",
+    "suspendLicense": "Suspend License",
+    "deleteRecord": "Delete Record",
+    "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone."
   }
 }
