--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -67,6 +67,7 @@
     "records": "Records",
     "suspendLicense": "Suspend License",
     "deleteRecord": "Delete Record",
+    "image": "Image",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone."
   }
