--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -68,6 +68,8 @@
     "suspendLicense": "Suspend License",
     "deleteRecord": "Delete Record",
     "image": "Image",
+    "panicButton": "Panic Button",
+    "panicButtonLeo": "{officer} has pressed the panic button.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone."
   }
