--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -1,5 +1,6 @@
 {
   "Values": {
+    "totalItems": "Total Items",
     "values": "Values",
     "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!"
   },
