:tada: ability to change passwords (closes #82)

--- a/packages/client/locales/en/account.json
+++ b/packages/client/locales/en/account.json
@@ -2,7 +2,8 @@
   "Account": {
     "account": "Account",
     "accountInfo": "Account Info",
-    "accountSettings": "Account Settings"
+    "accountSettings": "Account Settings",
+    "passwordSettings": "Password Settings"
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
