--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -45,6 +45,8 @@
     "insufficientPermissions": "Insufficient Permissions",
     "maxBusinessesLength": "You have reached the maximum limit of businesses per citizen.",
     "dateLargerThanNow": "Please provide a date smaller than the current date.",
-    "divisionNotInDepartment": "This division does not exist in this department."
+    "divisionNotInDepartment": "This division does not exist in this department.",
+    "passwordsDoNotMatch": "Passwords do not match",
+    "currentPasswordIncorrect": "Current password is incorrect"
   }
 }
