:tada: improved search (closes #64)

--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -70,6 +70,7 @@
     "image": "Image",
     "panicButton": "Panic Button",
     "panicButtonLeo": "{officer} has pressed the panic button.",
+    "viewAllResults": "View All Results",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone."
   }
