:tada: able to report vehicles as stolen (closes #87)

--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -71,6 +71,7 @@
     "panicButton": "Panic Button",
     "panicButtonLeo": "{officer} has pressed the panic button.",
     "viewAllResults": "View All Results",
+    "vehicleReportedStolen": "WARNING: This vehicle was reported stolen.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone."
   }
