--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -44,6 +44,7 @@
     "addVehicle": "Add Vehicle",
     "noVehicles": "You do not have any vehicles registered yet.",
     "deleteVehicle": "Delete Vehicle",
+    "reportAsStolen": "Report as stolen",
     "alert_deleteVehicle": "Are you sure you want to delete this vehicle? This action cannot be undone."
   },
   "Weapons": {
