:tada: allow admins to set password for user (closes #83)

--- a/packages/client/locales/en/auth.json
+++ b/packages/client/locales/en/auth.json
@@ -10,6 +10,8 @@
     "hasAccount": "Already have an account? Login here.",
     "show": "show",
     "hide": "hide",
-    "registrationCode": "Registration Code"
+    "registrationCode": "Registration Code",
+    "changePassword": "Change Password",
+    "savePasswordInfo": "Make sure to securely save your new password so this doesn't happen again!"
   }
 }
