:tada: more progress on #78 + more bug fixes

--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -81,5 +81,11 @@
     "ADD": "Add Category",
     "DELETE": "Delete Category",
     "EDIT": "Edit Category"
+  },
+  "IMPOUND_LOT": {
+    "MANAGE": "Manage Impound Lots",
+    "ADD": "Add Impound Lot",
+    "DELETE": "Delete Impound Lot",
+    "EDIT": "Edit Impound Lot"
   }
 }
