:tada: DL categories (closes #39)

--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -24,9 +24,11 @@
     "image": "Image",
     "age": "Age",
     "driversLicense": "Drivers License",
+    "driversLicenseCategory": "Drivers License Categories",
     "weaponLicense": "Firearms License",
     "phoneNumber": "Phone Number",
     "pilotLicense": "Pilot License",
+    "pilotLicenseCategory": "Drivers License Categories",
     "ccw": "CCW",
     "createTaxiCall": "Create Taxi Call",
     "create911Call": "Create 911 Call",
